[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["filosfino <github@filosfino.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
